feat (author): now user can become an author
