# routes/authors.routes.js
@@ -3,6 +3,8 @@ const router = new Router()
 
 const authorsController = require('../controllers/authors.controllers')
 
+router.post('/v1/authors', authorsController.becomeAuthor)
+
 router.get('/v1/authors/:id', authorsController.getAuthorById)
 
 module.exports = router
